# relationship-holographic

./: .coverage  .env.example  .gitignore  AGENTS.md  MCP_SERVER_CONFIG.json  README.md  package.json  pyproject.toml  requirements.txt  start.sh  世界顶级参考方案.md  从默认沉默到无话不谈：完整深度互动手册.html  从默认沉默到无话不谈：完整深度互动手册.md  场景样本库完整版.json  实施路线图.md  对话语料库.json  情绪词典完整版.json  数据库Schema.sql  知识库.json
backend/: __init__.py  main.py
content_sources/: README.md
data/: relationship_training.db-shm
docs/: api_contract.json  debug_log.md  dependency.dot  dependency_graph.md  high_level_design.md  progress.md  relationship-psychology-research.md  requirements_final.md  runtime_config.yml  tasks.md  validation_report.md  三性三管理项目脉络总纲.md  下一阶段全面审计待办与执行方案.md  下一阶段统一产品架构与执行蓝图.md  世界级关系动力学系统全面审计与进化方案.md  世界级关系感知训练生命体总构建Prompt.md  世界级功能完整性升级准则.md  世界级总体验收报告.md  世界级模块选项卡与内容模板总则.md  世界级自动执行路线图.md  从元基础到熟能生巧的掌握路线.md  元基础数据与学习架构路线图.md  分类脉络与5W2H元认知框架.md  前端优化方案.md  功能模块选项卡结构模板规范.md  场景化表达与深度共情世界级融合升级版.md  指挥官执行者构建蓝图.md  数图结合可视化认知体系.md  本项目Zero-Gate全自动构建Prompt.md  深度舒适聊天与现实感受交替提问标准流程.md  终极目标进化方案审计_2026-05-31.md  表达工具箱贯通架构方案.md  资源案例矩阵与采集组织升级方案.md  阶元式心理沟通与场景化表达标准流程.md  阶段三训练中心与摘要闭环审计记录.md  阶段二前端闭环与进化中心审计记录.md  项目全面审计与建设性待办清单_2026-05-26.md  项目发展轨迹指南.md  项目需求与功能原则统一索引.md  项目需求审计与评估报告.md
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
tests/: conftest.py  test_ai_provider_safety.py  test_analytics_api.py  test_case_blueprint_enrichment.py  test_catalog_profile_review_api.py  test_commander.py  test_content_import_database.py  test_contextual_case_blueprint_repair.py  test_contextual_quality_governance.py  test_contextual_response_repair.py  test_core_engines.py  test_data_content_governance.py  test_database_schema_guard.py  test_deep_emotional_connection_seed.py  test_developmental_emotion_transition_seed.py  test_dialogue_response_governance.py  test_emotion_strategy_api.py  test_evolution_api.py  test_evolution_intelligence.py  test_expression_api.py  test_expression_tool_enrichment.py  test_high_quality_data_acquisition.py  test_knowledge_api.py  test_learning_pipeline_api.py  test_module_metadata_completion.py  test_module_tab_templates.py  test_nvc_three_step_seed.py  test_relationship_need_calibration_seed.py  test_resource_case_quality_automation.py  test_riddle_interaction_seed.py  test_safety_alternative_training_seed.py  test_seed_data.py  test_self_disclosure_intimacy_seed.py  test_source_surf_expansion_seed.py  test_training_flow.py  test_vector_index.py  (+3 more)
(+142 files in other folders)
