[project]
name = "relationship-training-system"
version = "1.0.0"
description = "世界最顶级的两性关系感知训练系统"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Developer", email = "dev@example.com" }
]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlmodel>=0.0.14",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.6",
    "httpx>=0.26.0",
    "apscheduler>=3.10.4",
    "loguru>=0.7.2",
    "python-dotenv>=1.0.0",
    "sqlite-vec>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
    "mypy>=1.8.0",
    "ruff>=0.1.0",
    "pyright>=1.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[tool.ruff]
target-version = "py311"
line-length = 120
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "RUF", # Ruff-specific rules
]
ignore = [
    "E501",  # line too long - handled by formatter
    "B008",  # do not perform function calls in argument defaults
    "RUF001", # 中文内容允许全角/语义符号
    "RUF002", # 中文 docstring 允许全角/语义符号
    "RUF003", # 中文 comment 允许全角/语义符号
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"backend/database/expand_data.py" = ["C901"]
"backend/database/expand_data_v2.py" = ["C901"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --cov=backend --cov-report=term-missing --cov-report=html"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["backend"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "backend/database/expand_data.py",
    "backend/database/expand_data_v2.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.::",
    "if TYPE_CHECKING:",
]
